29/03/2025:
	- Update to Doxygen code documentation


25/03/2025:
	- Added missing quality level copy to output from TIFF encoding.
	- Switched STL container element addition to std::move to enable faster move semantics


24/02/2025:
	- Minor cleanups to improve constructor initialization and remove unused variables


22/02/2025:
	- Updated CIELAB decoding to fully handle 8 and 16 bit as well as floating point images.
	- Added new sRGB2LAB() function.


20/02/2025:
	- Re-ordered initializer lists in Watermark class constructor.
	- Minor tweak to ICC embedding code to improve logging output.


19/02/2025:
	- Refactor of watermarking code to allow it to be applied to JPEG2000 and JPEG source images when
	  requesting a region through the CVT function. Watermarking now applied as the very final step after
	  all other processing carried out and if image dimensions are greater than 2x the tile size of the
	  source image, the image is divided into blocks and multiple watermarks applied, one per block.
	  Resolves https://github.com/ruven/iipsrv/issues/255. Implementation partially derived from
	  https://github.com/ruven/iipsrv/pull/219


14/02/2025:
	- Harmonizied ICC profile handling between JTL and CVT and replaced EMBED_ICC startup parameter with
	  more flexible MAX_ICC parameter, which defines the maximum acceptable size for an ICC profile.
	  Profiles larger than this are stripped out of the output image. If set to -1, profiles are always
	  added and if set to 0 never.


14/01/2025:
	- Fix to TPTImage string concatenation bug, elimination of type warnings and documentation updates


20/11/2024:
	- Added TIFF output support for both regions (CVT=TIFF) and tiles (TTL=<resolution>,<tile number>). TIFF
	  encoder handles all bit depths, alpha channels, ICC profiles and basic TIFF and XMP metadata.
	- QLT argument can be used to specify both compression as well as quality using the syntax QLT=<compression>:<quality>.